--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
- "name": "notepad",
- "version": "1.0.0",
- "description": "simple web notepad",
- "scripts": {
-  "test": "echo \"Error: no test specified\" && exit 1",
-  "watch": "webpack --watch --config webpack.dev.js",
-  "start": "webpack serve --open --config webpack.dev.js",
-  "build": "webpack --config webpack.prod.js",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d dist"
- },
- "repository": {
-  "type": "git",
-  "url": "git+https://github.com/Prince-Thind/notepad.git"
- },
- "keywords": [],
- "author": "",
- "license": "ISC",
- "bugs": {
-  "url": "https://github.com/Prince-Thind/notepad/issues"
- },
- "homepage": "https://github.com/Prince-Thind/notepad#readme",
- "devDependencies": {
-  "css-loader": "^6.2.0",
-  "css-minimizer-webpack-plugin": "^3.0.2",
-  "eslint": "^7.32.0",
-  "eslint-config-airbnb-base": "^14.2.1",
-  "eslint-config-prettier": "^8.3.0",
-  "eslint-plugin-import": "^2.24.2",
-  "html-loader": "^2.1.2",
-  "html-webpack-plugin": "^5.3.2",
-  "mini-css-extract-plugin": "^2.2.0",
-  "webpack": "^5.51.1",
-  "webpack-cli": "^4.8.0",
-  "webpack-dev-server": "^4.0.0",
-  "webpack-merge": "^5.8.0"
- },
- "dependencies": {
-  "gh-pages": "^3.2.3"
- },
- "private": true
+  "name": "my-webpack-project",
+  "version": "1.0.0",
+  "description": "My webpack project",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode=production --node-env=production",
+    "build:dev": "webpack --mode=development",
+    "build:prod": "webpack --mode=production --node-env=production",
+    "watch": "webpack --watch",
+    "serve": "webpack serve"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/prince-thind/notepad.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/prince-thind/notepad/issues"
+  },
+  "homepage": "https://github.com/prince-thind/notepad#readme",
+  "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "@webpack-cli/generators": "^2.4.2",
+    "babel-loader": "^8.2.5",
+    "css-loader": "^6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.6.0",
+    "prettier": "^2.6.2",
+    "style-loader": "^3.3.1",
+    "webpack": "^5.72.1",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.9.0"
+  }
 }
