--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
     "watch": "webpack --watch",
     "serve": "webpack serve"
   },
@@ -35,5 +37,8 @@
     "webpack": "^5.72.1",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.9.0"
+  },
+  "dependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
